# bmp-line-drawer

./: .gitignore  CMakeLists.txt  README.md
inc/: BMPViewer.h
src/: BMPViewer.cpp  main.cpp
